--- a/src/views/html/assets/scss/common/_variables.scss
+++ b/src/views/html/assets/scss/common/_variables.scss
@@ -449,7 +449,8 @@ $fc-default-dark: #d4d4d7; //Font default color dark
 $fc-gray: #ebebf599;
 // color
 //$black: #222;
-$point: #7346f3;
+// $point: #7346f3;
+$point: #4F39F6;
 $point2: #000ac9;
 $point3: #0e8ef9;
 $point-light: #c9ebeb;
@@ -465,8 +466,8 @@ $bg-dark-light: #161f32;
 $inner-dark: #161b22;
 $inner-dark-light: #161f32;
 
-$bg: #030712;
-$bg-2: #09091d;
+$bg: #020618;
+$bg-2: #0F172B;
 $text-2: #e4e4e7;
 $text-3: #a1a1aa;
 $gray-700: #8E8E8E;
