--- a/src/views/html/assets/scss/page/main.scss
+++ b/src/views/html/assets/scss/page/main.scss
@@ -220,7 +220,7 @@
 	 position: absolute;
 	 inset: 0;
 	 bottom:0;
-	 background-image: linear-gradient(to bottom, transparent 60%, #051661 120%);
+	 background-image: linear-gradient(to bottom, transparent 60%, #0F172B 120%);
  }
 
 	.section_title{
