--- a/src/views/html/component/contents/popup.module.scss
+++ b/src/views/html/component/contents/popup.module.scss
@@ -1,261 +1,263 @@
 @import '../../assets/scss/common/variables';
 // !modal 공통
 .popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  max-height: 100vh;
-  z-index: 107;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-    background-color: #1f1f1f;
-  //@include media-min($m) {
-  //  padding-inline: 20px;
-  //}
-  &.active {
-    display: flex;
-    align-items: center;
-  }
-  &__bg_close {
-    //bg클릭시 팝업이 닫히게 하기위함
     position: fixed;
-    width: 100%;
-    height: 100vh;
     top: 0;
     left: 0;
-    z-index: 105;
-    background-color: rgba(#000, 0.5);
-  }
-  &__pop_tit {
-    padding-bottom: 15px;
-    font-size: 20px;
-    font-weight: 700;
-    text-align: center;
-    .dark & {
-      color: #fff;
-    }
-  }
-  &__container {
-    position: relative;
-    z-index: 108;
     width: 100%;
-    //max-width: calc(100% - $pd-inline * 2);
-    //background: #fff;
-    //border-radius: 10px;
-    overflow: hidden;
-    margin-inline: auto;
-    @include media-max($m) {
-      border-radius: 0;
-      max-width: 100% !important;
-    }
-    .dark & {
-      background: #1a1d26;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-    }
-    &.xl {
-      width: 1280px;
-    }
-    //&.l{width:900px;}
-    &.m {
-      width: 800px;
-    }
-    &.s {
-      width: 500px;
-    }
-    &.sm {
-      width: 350px;
-    }
-    //&.xs{
-    //  width:300px;
-    //  .btn_close{
-    //    top:10px;
-    //  }
-    //}
-  }
-  &__header {
+    height: 100%;
+    max-height: 100vh;
+    z-index: 107;
     display: flex;
-    justify-content: flex-end;
-    &-btn {
-      position: absolute;
-      top: 0;
-      right: 0;
-      padding: 20px;
-      z-index: 1;
-      background-color: rgba(#000, 0.2);
-      transition: 0.3s;
-      svg {
-        transform: rotate(0);
-        transition: 0.2s;
-      }
-
-      &:hover {
-        background-color: rgba(#000, 0.5);
-        svg {
-          transform: rotate(180deg);
-        }
-      }
-      @include media-max($l) {
-        padding: 10px;
-      background-color: rgba(#000, 0.5);
-        svg {
-					width: 16px;
-					height: 16px;
-        }
-      }
-    }
-  }
-  &__content {
-    /*스크롤영역*/
-    overflow: hidden;
-    overflow-y: auto;
-    text-align: left;
-
-    @include scroll(calc(100vh), hidden, auto);
-    height: 100vh;
+    justify-content: center;
     align-items: center;
-		@include media-min($l) {
-				
-    @include flex(x);
-		}
-  }
-
-  &__top {
-    @include flex(column);
-    padding-top: 50px;
-    color: #fff;
-    h3 {
-      margin-bottom: 20px;
+    background-color: #1f1f1f;
+    //@include media-min($m) {
+    //  padding-inline: 20px;
+    //}
+    &.active {
+        display: flex;
+        align-items: center;
     }
-    :global(.com_btn) {
-      width: 200px;
-      border-width: 1px;
-      align-self: flex-end;
-	
-			&:hover{
-				background-image: linear-gradient(#1f1f1f, #1f1f1f), 
-				linear-gradient(to right, #0088FF 0%, #7900C9 100%) 
-			}
-      @include media-max($l) {
-        height: 45px;
-        padding-inline: 0;
-        font-size: 14px;
-        margin-block: 0;
-        width: 160px;
-        min-width: auto;
-        align-self: flex-end;
-      }
+    &__bg_close {
+        //bg클릭시 팝업이 닫히게 하기위함
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        z-index: 105;
+        background-color: rgba(#000, 0.5);
     }
-    @include media-max($l) {
-      gap: 0;
-      padding-top: 20px;
-      h3 {
-        margin-bottom: 10px;
-      }
-    }
-    h3 {
-      @include fontSize(20, 40);
-      line-height: 1.4;
-      letter-spacing: 1px;
-      font-weight: 800;
-    }
-    span {
-      @include fontSize(14, 24);
-      line-height: 1.4;
-    }
-  }
-  &__body {
-    position: relative;
-    padding: 40px 60px;
-    min-width: 38vw;
-    //background: linear-gradient(180deg, #6c34f9 0%, #0e8ef9 100%);
-    height: 100vh;
-    @include media-max($l) {
-      padding: 0 20px 20px;
-      min-width: none;
-      width: 100%;
-			height: auto;
-    }
-  }
-  &__bottom {
-    margin-top: 40px;
-    @include media-min($l) {
-      position: absolute;
-      left: 60px;
-      bottom: 40px;
-      width: calc(100% - 120px);
-    }
-    :global(.com_btn) {
-      width: 100%;
-			&:hover{
-				background-image: linear-gradient(#1f1f1f, #1f1f1f), 
-				linear-gradient(to right, #0088FF 0%, #7900C9 100%);
-			}
-    }
-  }
-  &__content-img {
-    position: relative;
-    text-align: center;
-    padding-bottom: 60px;
-    padding-top: 50px;
-    flex: 1;
-  background-color: #000;
-	@include media-min($l) {
-			height: 100vh;
-			@include flex(all)
-	}
-    @include media-max($l) {
-      padding: 20px;
-      width: 100%;
-    }
-    img {
-      max-width: 100%;
-      @include media-max($m) {
-        max-width: 100%;
-      }
-    }
-  }
-  &__summary_list {
-    margin-top: 30px;
-    &-item {
-      @include flex(between);
-      padding-block: 20px;
-      border-bottom: 1px solid rgba(#fff, 0.15);
-      color: $gray-700;
-      @include media-max($l) {
-        padding-block: 15px;
-      }
-      span {
-        font-weight: 700;
-      }
-      b {
-        color: #fff;
-        font-weight: 600;
-      }
-    }
-  }
-
-  //타입
-  &__type_alert {
-    .pop_container {
-      width: 350px;
-    }
-    .content_container {
-      padding: 20px 20px 15px;
-      font-size: 15px;
-      line-height: 1.47;
-      letter-spacing: -0.38px;
-      text-align: center;
-      .txt {
-        & + .txt {
-          margin-top: 15px;
-        }
-      }
-      .btn_container {
+    &__pop_tit {
         padding-bottom: 15px;
-      }
+        font-size: 20px;
+        font-weight: 700;
+        text-align: center;
+        .dark & {
+            color: #fff;
+        }
     }
-  }
+    &__container {
+        position: relative;
+        z-index: 108;
+        width: 100%;
+        //max-width: calc(100% - $pd-inline * 2);
+        //background: #fff;
+        //border-radius: 10px;
+        overflow: hidden;
+        margin-inline: auto;
+        @include media-max($m) {
+            border-radius: 0;
+            max-width: 100% !important;
+        }
+        .dark & {
+            background: #1a1d26;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+        &.xl {
+            width: 1280px;
+        }
+        //&.l{width:900px;}
+        &.m {
+            width: 800px;
+        }
+        &.s {
+            width: 500px;
+        }
+        &.sm {
+            width: 350px;
+        }
+        //&.xs{
+        //  width:300px;
+        //  .btn_close{
+        //    top:10px;
+        //  }
+        //}
+    }
+    &__header {
+        display: flex;
+        justify-content: flex-end;
+        &-btn {
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: 20px;
+            z-index: 1;
+            background-color: rgba(#000, 0.2);
+            transition: 0.3s;
+            svg {
+                transform: rotate(0);
+                transition: 0.2s;
+            }
+
+            &:hover {
+                background-color: rgba(#000, 0.5);
+                svg {
+                    transform: rotate(180deg);
+                }
+            }
+            @include media-max($l) {
+                padding: 10px;
+                background-color: rgba(#000, 0.5);
+                svg {
+                    width: 16px;
+                    height: 16px;
+                }
+            }
+        }
+    }
+    &__content {
+        /*스크롤영역*/
+        overflow: hidden;
+        overflow-y: auto;
+        text-align: left;
+
+        @include scroll(calc(100vh), hidden, auto);
+        height: 100vh;
+        align-items: center;
+        @include media-min($l) {
+            @include flex(x);
+        }
+    }
+
+    &__top {
+        @include flex(column);
+        padding-top: 50px;
+        color: #fff;
+        h3 {
+            margin-bottom: 20px;
+        }
+        &_desc {
+            @include fontSize(14, 24);
+            line-height: 1.4;
+            margin-bottom: 20px;
+        }
+        :global(.com_btn) {
+            width: 200px;
+            border-width: 1px;
+            align-self: flex-end;
+
+            &:hover {
+                background-image: linear-gradient(#1f1f1f, #1f1f1f), linear-gradient(to right, #0088ff 0%, #7900c9 100%);
+            }
+            @include media-max($l) {
+                height: 45px;
+                padding-inline: 0;
+                font-size: 14px;
+                margin-block: 0;
+                width: 160px;
+                min-width: auto;
+                align-self: flex-end;
+            }
+        }
+        @include media-max($l) {
+            gap: 0;
+            padding-top: 20px;
+            h3 {
+                margin-bottom: 10px;
+            }
+        }
+        h3 {
+            @include fontSize(20, 40);
+            line-height: 1.4;
+            letter-spacing: 1px;
+            font-weight: 800;
+        }
+        span {
+            @include fontSize(14, 24);
+            line-height: 1.4;
+        }
+    }
+    &__body {
+        position: relative;
+        padding: 40px 60px;
+        min-width: 38vw;
+        //background: linear-gradient(180deg, #6c34f9 0%, #0e8ef9 100%);
+        height: 100vh;
+        @include media-max($l) {
+            padding: 0 20px 20px;
+            min-width: none;
+            width: 100%;
+            height: auto;
+        }
+    }
+    &__bottom {
+        margin-top: 40px;
+        @include media-min($l) {
+            position: absolute;
+            left: 60px;
+            bottom: 40px;
+            width: calc(100% - 120px);
+        }
+        :global(.com_btn) {
+            width: 100%;
+            &:hover {
+                background-image: linear-gradient(#1f1f1f, #1f1f1f), linear-gradient(to right, #0088ff 0%, #7900c9 100%);
+            }
+        }
+    }
+    &__content-img {
+        position: relative;
+        text-align: center;
+        padding-bottom: 60px;
+        padding-top: 50px;
+        flex: 1;
+        background-color: #000;
+        @include media-min($l) {
+            height: 100vh;
+            @include flex(all);
+        }
+        @include media-max($l) {
+            padding: 20px;
+            width: 100%;
+        }
+        img {
+            max-width: 100%;
+            @include media-max($m) {
+                max-width: 100%;
+            }
+        }
+    }
+    &__summary_list {
+        margin-top: 30px;
+        &-item {
+            @include flex(between);
+            padding-block: 20px;
+            border-bottom: 1px solid rgba(#fff, 0.15);
+            color: $gray-700;
+            @include media-max($l) {
+                padding-block: 15px;
+            }
+            span {
+                font-weight: 700;
+            }
+            b {
+                color: #fff;
+                font-weight: 600;
+            }
+        }
+    }
+
+    //타입
+    &__type_alert {
+        .pop_container {
+            width: 350px;
+        }
+        .content_container {
+            padding: 20px 20px 15px;
+            font-size: 15px;
+            line-height: 1.47;
+            letter-spacing: -0.38px;
+            text-align: center;
+            .txt {
+                & + .txt {
+                    margin-top: 15px;
+                }
+            }
+            .btn_container {
+                padding-bottom: 15px;
+            }
+        }
+    }
 }
